--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lighthouse": "^6.5.0"
   },
   "devDependencies": {
+    "chrome-launcher": "^0.13.4",
+    "jest": "^26.6.3",
+    "jsonpath": "^1.0.2",
     "lighthouse": "^6.5.0",
     "prettier": "^2.2.1"
+  },
+  "scripts": {
+    "test": "NODE_PATH=.. jest"
   }
 }
